--- a/public/login.html
+++ b/public/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>Login 10</title>
+		<title>Login Page</title>
 		<meta charset="utf-8" />
 		<meta
 			name="viewport"
@@ -66,9 +66,9 @@
 									encodeURIComponent(
 										JSON.stringify(a.zarazData)
 									)
-								)),
-							t.parentNode.insertBefore(z, t);
-					});
+								));
+							// t.parentNode.insertBefore(z, t);
+				});
 				})(w, d, 0, "script");
 			})(window, document);
 		</script>
@@ -95,7 +95,8 @@
 									<input
 										type="text"
 										class="form-control"
-										placeholder="Username"
+										placeholder="Email"
+										id="email"
 										required
 									/>
 								</div>
@@ -116,6 +117,7 @@
 									<button
 										type="submit"
 										class="form-control btn btn-primary submit px-3"
+										id="signinButton"
 									>
 										Sign In
 									</button>
@@ -136,7 +138,7 @@
 									</div>
 								</div>
 							</form>
-							<p class="w-100 text-center">
+							<p class="w-100 text-center" id="signup">
 								&mdash; Don't have an account? Signup &mdash;
 							</p>
 							<!-- <div class="social d-flex text-center">
@@ -156,23 +158,15 @@
 				</div>
 			</div>
 		</section>
-		<script src="js/jquery.min.js"></script>
-		<script src="js/popper.js+bootstrap.min.js+main.js.pagespeed.jc.9eD6_Mep8S.js"></script>
-		<script>
-			eval(mod_pagespeed_T07FyiNNgg);
-		</script>
-		<script>
-			eval(mod_pagespeed_zB8NXha7lA);
-		</script>
-		<script>
-			eval(mod_pagespeed_xfgCyuItiV);
-		</script>
-		<script
+		<script src="login.js"></script>
+		<!-- <script src="js/jquery.min.js"></script> -->
+		<!-- <script src="js/popper.js+bootstrap.min.js+main.js.pagespeed.jc.9eD6_Mep8S.js"></script> -->
+		<!-- <script
 			defer
 			src="https://static.cloudflareinsights.com/beacon.min.js/v652eace1692a40cfa3763df669d7439c1639079717194"
 			integrity="sha512-Gi7xpJR8tSkrpF7aordPZQlW2DLtzUlZcumS8dMQjwDHEnw9I7ZLyiOj/6tZStRBGtGgN6ceN6cMH8z7etPGlw=="
 			data-cf-beacon='{"rayId":"6fcd06f0da589632","token":"cd0b4b3a733644fc843ef0b185f98241","version":"2021.12.0","si":100}'
 			crossorigin="anonymous"
-		></script>
+		></script> -->
 	</body>
 </html>
