--- a/public/login.html
+++ b/public/login.html
@@ -139,20 +139,8 @@
 								</div>
 							</form>
 							<p class="w-100 text-center" id="signup">
-								&mdash; Don't have an account? Signup &mdash;
+								Don't have an account? Signup
 							</p>
-							<!-- <div class="social d-flex text-center">
-								<a href="#" class="px-2 py-2 mr-md-1 rounded"
-									><span
-										class="ion-logo-facebook mr-2"
-									></span>
-									Facebook</a
-								>
-								<a href="#" class="px-2 py-2 ml-md-1 rounded"
-									><span class="ion-logo-twitter mr-2"></span>
-									Twitter</a
-								>
-							</div> -->
 						</div>
 					</div>
 				</div>
