--- a/public/signup.html
+++ b/public/signup.html
@@ -11,8 +11,8 @@
          Wrong Details
           </div>
 
-        <label for="name" >Name</label>
-        <input type="text" id="userName" placeholder="Name" id="username">
+        <label for="email" >Email</label>
+        <input type="text" id="email" placeholder="Enter your email" id="username">
 
         <label for="password" >Password</label>
         <input type="password" id="password" placeholder="Password" id="password">
